@@ -1,6 +1,8 @@
 package com.justinoboyle.utility;
 
-import java.util.Base64;
+import java.io.UnsupportedEncodingException;
+
+import javax.xml.bind.DatatypeConverter;
 
 import com.google.gson.Gson;
 
@@ -9,11 +11,22 @@ public class Saving {
     public static final Gson GSON = new Gson();
 
     public static String fromBase64(String str) {
-        return new String(Base64.getDecoder().decode(str.getBytes()));
+        try {
+            return new String(DatatypeConverter.parseBase64Binary(str), "UTF-8");
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 
     public static String toBase64(String str) {
-        return new String(Base64.getEncoder().encode(str.getBytes()));
+        try {
+            return DatatypeConverter.printBase64Binary(str.getBytes("UTF-8"));
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+            return null;
+        }
+        
     }
 
 }
